--- a/.babelrc
+++ b/.babelrc
@@ -6,7 +6,12 @@
         "bugfixes": true
       }
     ],
-    "@babel/preset-react",
+    [
+      "@babel/preset-react",
+      {
+        "runtime": "automatic",
+      }
+    ],
     "@babel/preset-typescript"
   ],
   "plugins": [
