--- a/package.json
+++ b/package.json
@@ -47,7 +47,12 @@
   "dependencies": {
     "@loadable/component": "^5.15.2",
     "@loadable/server": "^5.15.2",
+    "atomic-router": "^0.7.1",
+    "atomic-router-react": "^0.8.0",
+    "effector": "^22.3.0",
+    "effector-react": "^22.3.3",
     "express": "^4.18.2",
+    "history": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
